--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
     <article class="popular_thumbnails">
             <a href="#">
     <div class="popular_thumbnails_box">
-    <img src="images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="Hôtel Le soleil du matin image">
+    <img class="popular_mediaqueris" src="images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="Hôtel Le soleil du matin image">
     <div class="popular_thumbnails_box_info">
             <h3>Hôtel Le soleil du matin</h3>
             <p>Nuit à partir de 128<strong>€</strong></p>
