--- a/index.html
+++ b/index.html
@@ -88,9 +88,9 @@
             </a>
     </article>
 
-    <article class="accommodation_thumbails">
+    <article class="accommodation_thumbnails">
             <a href="#">
-    <div class="accommodation_thumbails_box">
+        <div class="accommodation_thumbails_box">
     <img src="Images/Hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt="Hôtel du port image">
             <h3>Hôtel du port</h3>
             <p>Nuit à partir de 52<strong>€</strong></p>
